style-login.css
/*
Theme Name: 	C'mon homy, we major.
Theme URI: 		http://ericcroskey.com
Description: 	Celebrating the graduation of Eric Croskey
Version: 		2.0
Author: 		Eric Croskey
Author URI: 	http://ericcroskey.com
Tags: 			starkers, naked, clean, basic
*/

/*
===========================
CONTENTS:

01 Sensible defaults
02 Typography
03 Media queries
===========================
*/

/* ----------------------------------------------------------------------------------------------------------
01 Sensible defaults ----------------------------------------------------------------------------------------
---------------------------------------------------------------------------------------------------------- */

@import "css/reset.css";
@import "css/fonts.css";

div,
article,
section,
header,
footer,
nav,
li					{ position:relative; /* For absolutely positioning elements within containers (add more to the list if need be) */ }
.group:after 		{ display:block; height:0; clear:both; content:"."; visibility:hidden; /* For clearing */ }
body 				{ background:#fff; /* Don't forget to style your body to avoid user overrides */ }
::-moz-selection 	{ background:#ff0; color:#333; }
::selection 		{ background:#ff0; color:#333; }

-WebKit-scrollbar {
	display: none;
}

html,
body {
	height: 100%;
	width: 100%;
	font-family: 'TipografiaRamis - CentimaMono';
	overflow: hidden;
	line-height: 18px;
	padding: 0;
	margin: 0;
}

a,
a:active,
a:visited,
a:link {
	outline: none;
}

/* ----------------------------------------------------------------------------------------------------------
02 Typography -----------------------------------------------------------------------------------------------
---------------------------------------------------------------------------------------------------------- */
/*

14 / 16	= 		0.875em 		(14px equivalent)
16 / 16	= 		1em 			(16px equivalent)
18 / 16 = 		1.125em 		(18px equivalent)
21 / 16 = 		1.3125em 		(21px equivalent)
24 / 16 = 		1.2em 			(24px equivalent)
30 / 16 = 		1.875em 		(30px equivalent)

*/

body,
input,
textarea 			{ /* We strongly recommend you declare font-weight using numerical values, but check to see which weights you're exporting first */ }

.redact p,
.redact h4 {
	letter-spacing: -1px;
}

h1,
h2,
h3,
h4,
h5,
h6 					{ font-weight: bold; /* This helps to identify headings at the initial build stage, but you should write something more precise later on */ }

/* ----------------------------------------------------------------------------------------------------------
03 Media queries (using a mobile-first approach) ------------------------------------------------------------
---------------------------------------------------------------------------------------------------------- */

/* 400 and up */

body:before, body:after {
    content: "";
    position: fixed;
    background: #4848d8;
    left: 0;
    right: 0;
    height: 8px;
}

body:before {
    top: 0;
}
body:after {
    bottom: 0;
}

body {
    border-left: 8px solid #4848d8;
    border-right: 8px solid #4848d8;
}

	#login {
		overflow-x: hidden;
		overflow-y: scroll;
		z-index: 50000;
		margin: 0 auto;
		padding: 0;
		border-radius: 0;
		padding-top: 60px;
	}

	label {
		font-size: 10px!important;
		color: black;
	}

	#password_protected_pass {
		font-family: 'TipografiaRamis - CentimaMono';
		max-width: 99%;
		width: 394px!important;
		font-size: 11px;
		height: 23px!important;
		border: 0;
		padding-left: 12px!important;
		border-bottom: 3px solid #4848d8;
		line-height: 24px;
		color: #373d46;
		background: #f9f9f9 ;
		outline: none;
		padding: 4px
		border-radius: 0!important;
		-webkit-border-radius: 0!important;
		-moz-border-radius: 0!important;
		-ms-border-radius: 0!important;
	}

	#password_protected_rememberme, 	#password_protected_rememberme:checked {
		border-bottom: 3px solid #4848d8;
		background: #f9f9f9 ;
		color: #373d46!important;
	}

textarea {
		font-family: 'TipografiaRamis - CentimaMono';
		width: 99%;
		font-size: 11px;
		height: 100px;
		padding: 3px;
		border: 0;
		border-bottom:3px solid #4848d8;
		line-height:18px;
		color: #373d46;
		background: #f9f9f9;
		outline: none;
	}

	#wp-submit {
		font-family: 'TipografiaRamis - CentimaMono';
		width: 92px;
		margin: 4px 0 0 0;
		padding: 4px 8px 2px 8px!important;
		font-size: 11px;
		height: 30px;
		border: 0;
		border-bottom:1px solid #ff5759;
		line-height: 27px!important;
		color: #fff;
		background: #ff5759;
		outline: none;
		float: right!important;
		border-radius: 0!important;
		-webkit-border-radius: 0!important;
		-moz-border-radius: 0!important;
		-ms-border-radius: 0!important;
		width: inherit!important;
	}

.loginpress-show-love {
	display: none;
}

